--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<div ng-controller="TaporMainController"> 
+			<div id="tapor-main" ng-controller="TaporMainController"> 
 			<!-- navigation -->
 			<%= render "navigation" %>
 			<!-- header -->
