Formatting tag cloud as designed. Need to work on back end to list tools by tag.

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -55,7 +55,7 @@ body, html {
 
 #tapor-tagcloud {
 	background: RGBA(77, 77, 77, 1);
-	height: 145px;
+	/*height: 145px;*/
 	padding: 0px;
 	margin-top: 10px;	
 }
