Improvements on word cloud.

--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -180,7 +180,7 @@
 			<!-- XXX rearrange with modified width -->
 			<!-- <jqcloud words="system_tags" width="1170" height="145" steps="7" shape="rectangular"></jqcloud> -->
 			
-				<word-cloud ng-if="tagsLoaded" tags="systemTags" max-size="30", min-size="10", max-count="100"></word-cloud>
+				<word-cloud tags="systemTags" max-size="30", min-size="10", max-count="100"></word-cloud>
 			
 		</div>
 	</div>
