--- a/app/assets/templates/tools/view.html
+++ b/app/assets/templates/tools/view.html
@@ -101,7 +101,7 @@
 								</dt>
 								<dd>
 									
-									<word-cloud ng-if="data.tagsLoaded" tags="data.tags.system" max-size="30", min-size="10", max-count="30"></word-cloud>
+									<word-cloud tags="data.tags.system" max-size="30", min-size="10", max-count="30"></word-cloud>
 
 									<!-- <jqcloud words="data.tags.system" width="230" height="200" steps="7"></jqcloud> -->
 
