--- a/app/assets/templates/tools/index.html
+++ b/app/assets/templates/tools/index.html
@@ -5,7 +5,7 @@
 			<form class="form-inline">
 					<div class="form-group col-xs-4" ng-repeat="attribute in attributes">		
 						<label class="col-sm-6 text-right" style="margin-top: 10px">{{attribute.name}}</label>
-						<select class='form-control col-sm-6 search-field' ng-model='attribute.model' ng-options='value.name for value in attribute.attribute_values track by value.id' ng-change='update_attributes_filter()'>
+						<select class='form-control col-sm-6 search-field' ng-model='attribute.model' ng-options='value.name for value in attribute.attribute_values track by value.id' ng-change='updateAttributesFilter()'>
 							<option selected name=''></option>
 						</select>
 					</div>
