Fixes #12 Fixes #13 Minor fixes

--- a/app/assets/templates/tools/edit.html
+++ b/app/assets/templates/tools/edit.html
@@ -151,7 +151,7 @@
                       {{comment.user.name}}
                     </div>
                     <div>
-                      <div ng-bind-html="comment.content"></div>
+                      <div class="break-content" ng-bind-html="comment.content"></div>
                     </div>
                     <div>
                       <label>
@@ -182,7 +182,7 @@
                     {{comment.user.name}}
                   </div>
                   <div>
-                    <div ng-bind-html="comment.content"></div>
+                    <div class="break-content" ng-bind-html="comment.content"></div>
                   </div>
                   <div>
                     <label>
