--- a/app/assets/templates/tool_lists/contributing.html
+++ b/app/assets/templates/tool_lists/contributing.html
@@ -5,7 +5,7 @@
 	
 	<div class="row">
 		<div class="col-sm-1">
-			<img class="img-circle" src='{{current_user.image_url}}'>
+			<img class="img-circle user-image-url" src='{{current_user.image_url}}'>
 		</div>
 		<div class="col-sm-5">
 			{{current_user.name}}
