--- a/app/assets/templates/users/index.html
+++ b/app/assets/templates/users/index.html
@@ -34,7 +34,7 @@
 			</tr>
 			<tr ng-repeat="user in users_page.users track by $index">
 				<td>
-					<img src="{{user.image_url}}" class="img-circle">
+					<img src="{{user.image_url}}" class="img-circle user-image-url">
 				</td>
 				<td>
 					{{user.name}}
