--- a/app/assets/templates/users/view.html
+++ b/app/assets/templates/users/view.html
@@ -7,7 +7,7 @@
         <div class="panel-body">
           <div class="row">
             <div class="col-md-3">
-              <img src="{{profile_user.image_url}}" class="img-circle">  
+              <img src="{{profile_user.image_url}}" class="img-circle user-image-url">  
             </div>
             <div class="col-md-9">
               {{profile_user.name}} 
