--- a/app/assets/templates/tool_lists/edit.html
+++ b/app/assets/templates/tool_lists/edit.html
@@ -154,8 +154,8 @@
                 </div>
                 <div class="col-sm-6 break-content">
                   <ul>
-                    <li>
-                      {{list_item.tool.name}}
+                    <li id ="ttt">
+                      {{list_item.tool.name}} 
                     </li>
                     <li>
                     <div star-rating rating-value="list_item.tool.star_average" max="5" is-interactive="false"></div>
