--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -13,7 +13,7 @@
 	      		<div class="row">
 	      			<div class="col-md-12">
 
-	      			<div class="break-content tapor-tool-detail"> {{ tool.detail| htmlToPlaintext | maxN: 300}} </div>
+	      			<div class="break-content tapor-tool-detail overflow-hidden"> {{ tool.detail| htmlToPlaintext | maxN: 300}} </div>
 	      			
 	      			</div>
 	      		</div>
