Fixes #41 Will work when deployed on tapor.ca Minor fixes

--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -1,3 +1,17 @@
+
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "WebSite",
+  "url": "http://www.tapor.ca/",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "http://tapor.ca/tools?query={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+
 <div ng-controller='TaporIndexController' class='tapor-container'>
 	<!-- featured -->
 	<div class="row" >
