--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,17 @@
 		<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 		<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 		<link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700' rel='stylesheet' type='text/css'>
-		<%= csrf_meta_tags %>	
+		<%= csrf_meta_tags %>
+
+		<script type="application/ld+json">
+			{
+			  "@context" : "http://schema.org",
+			  "@type" : "WebSite",
+			  "name" : "TAPoR",
+			  "alternateName" : "Text Analysis Portal for Research",
+			  "url" : "http://www.tapor.ca"
+			}
+		</script>
 	</head>
 	<body>
 		<div class="container">
