--- a/app/views/home/_navigation.html.erb
+++ b/app/views/home/_navigation.html.erb
@@ -13,6 +13,9 @@
 			<li>
 				<a href='#' ng-click="go_to('/tools')">Tools</a>
 			</li>
+			<li ng-if="current_user.is_admin">
+				<a href='#' ng-click="go_to('/tools/featured')">Featured tools</a>
+			</li>
 			<li>
 				<a href='#' ng-click="go_to('/tool_lists')">Lists</a>
 			</li>			
