--- a/app/views/home/_navigation.html.erb
+++ b/app/views/home/_navigation.html.erb
@@ -37,6 +37,9 @@
 			<li ng-if="current_user !== null">
 				<a href='#' ng-click="go_to('/tool_lists/new')">Add list</a>
 			</li>
+			<li ng-if="current_user.is_admin">
+				<a href='#' ng-click="go_to('/attributes')">Attributes</a>
+			</li>
 			<li ng-if="current_user !== null">
 				<a href='/sign_out'>Logout</a>
 			</li>
