Fixes #57 . Wording should be better. This link is in fact only for administrators and leads to area  where featured tools can be set.

--- a/app/views/home/_navigation.html.erb
+++ b/app/views/home/_navigation.html.erb
@@ -14,7 +14,7 @@
 				<a href='#' ng-click="go_to('/tools')">Tools</a>
 			</li>
 			<li ng-if="current_user.is_admin">
-				<a href='#' ng-click="go_to('/tools/featured')">Featured tools</a>
+				<a href='#' ng-click="go_to('/tools/featured')">Set featured tools</a>
 			</li>
 			<li>
 				<a href='#' ng-click="go_to('/tool_lists')">Lists</a>
