Fixes #71 Minor code cleanup

--- a/app/assets/javascripts/angular/app.js.erb
+++ b/app/assets/javascripts/angular/app.js.erb
@@ -121,6 +121,7 @@ app.config(['$routeProvider', '$locationProvider',
       })
       .when('/tool_lists/edit/:id', {
         templateUrl: "<%= asset_path('tool_lists/edit.html') %>",
+        reloadOnSearch: false
       })
       .when('/tool_lists/:id', {
         templateUrl: "<%= asset_path('tool_lists/view.html') %>",
