--- a/app/assets/templates/tools/featured.html
+++ b/app/assets/templates/tools/featured.html
@@ -4,16 +4,53 @@
   	<div class="col-sm-6">
   		<div class="row">
   		<div class="panel panel-default">
-  			<div class="panel-heading list-editing-column">
+  			<!-- 
+        <div class="panel-heading list-editing-column">
         	<h1>Filtering & paginating mechanism</h1>
           <div class="row">
             <div class="col-md-12">
               <pagination total-items="tools_page.meta.count" ng-model="current_page" max-size="5" boundary-links="true" rotate="false" ng-change="pageChanged()"></pagination> 
             </div>
           </div>
+        </div> -->
+        <div class="row">
+          <div class="col-md-12">
+            <form class="form-inline">
+                <div class="form-group col-md-12">
+                  <label class="col-md-6 text-right" style="margin-top: 10px">Search</label>
+                  <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Search for..." ng-model='query' custom-enter="update_query_filter()">
+                  <span class="input-group-btn">
+                    <button class="btn btn-default" type="button" ng-click='update_query_filter()'><span class='glyphicon glyphicon-search'></span></button>
+                  </span>
+                </div>
+                </div>
+
+                <div class="form-group col-md-12" ng-repeat="attribute in attributes">   
+                  <label class="col-md-6 text-right" style="margin-top: 10px">{{attribute.name}}</label>
+                  <select class='form-control col-sm-6 search-field' ng-model='attribute.model' ng-options='value.name for value in attribute.attribute_values track by value.id' ng-change='updateAttributesFilter()'>
+                    <option selected name=''></option>
+                  </select>
+                </div>
+                <div class="form-group col-md-12">
+                  <label class="col-md-6 text-right" style="margin-top: 10px">Tag</label>
+                  <select class='form-control col-md-6 search-field' ng-model='tags.model' ng-options='value.text for value in tags.values track by value.id' ng-change='updateTagsFilter()'>
+                    <option selected name=''></option>
+                  </select>
+                </div>
+            </form>
+          </div>
         </div>
+
+        <!-- pagination -->
+        <div class="row">
+          <div class="col-md-12">
+            <pagination total-items="tools_page.meta.count" ng-model="page" max-size="5" boundary-links="true" rotate="false" ng-change="pageChanged()"></pagination>  of {{tools_page.meta.count}}
+          </div>
+        </div>
+
   			<div class="panel-body">
-  			<ul class="draggable_place list-tool-area list-unstyled" as-sortable="toolsListener" ng-model="tools_page.tools">
+  			<ul class="draggable_place list-tool-area list-unstyled" as-sortable="toolsListener" ng-model="tools">
           <li class="column_sortable" ng-repeat="tool in tools_page.tools" as-sortable-item>
             <div as-sortable-item-handle>
             	
@@ -73,36 +110,40 @@
         		</div>
         	</div>
         </div>
-  			<div class="panel-body">
-  			<ul class="draggable_place list-tool-area list-unstyled" as-sortable="toolsListener" ng-model="data.featured">
-          <li class="column_sortable" ng-repeat="tool in data.featured" as-sortable-item>
+  
+   			<div class="panel-body">
+  			<ul class="draggable_place list-tool-area list-unstyled" as-sortable="toolsListener" ng-model="data.tool_list_items">
+
+          <li class="column_sortable" ng-repeat="list_item in data.tool_list_items" as-sortable-item>
             <div as-sortable-item-handle>
             	
               <div class="row">
                 <div class="col-sm-6 break-content">
-                  <img src="{{tool.thumb_url}}">
+                  <img src="{{list_item.tool.thumb_url}}">
                 </div>
                 <div class="col-sm-6 break-content">
-                  <ul>
+                  <ul>                  
                     <li>
-                      {{tool.name}}
+                      {{list_item.tool.name}}
                     </li>
                     <li>
-                    <div star-rating rating-value="tool.star_average" max="5" is-interactive="false"></div>
+                    <div star-rating rating-value="list_item.tool.star_average" max="5" is-interactive="false"></div>
                       
                     </li>
-                    <li ng-if="tool.creators_email">
-                      {{tool.creators_email}}
+                    <li ng-if="list_item.tool.creators_email">
+                      {{list_item.tool.creators_email}}
                     </li>
-                    <li ng-if="tool.creators_url">
-                      {{tool.creators_url}}
+                    <li ng-if="list_item.tool.creators_url">
+                      {{list_item.tool.creators_url}}
                     </li>
-                    <li>
-                      <div ng-bind-html="tool.detail"></div>
+                    <li>      
+                      <div ng-bind-html="list_item.tool.detail"></div>
+                     
                     </li>
                   </ul>         
                 </div>
               </div>
+
 
 <!--             	<div class="row">
             		<div class="col-sm-12">
