--- a/app/views/home/_navigation.html.erb
+++ b/app/views/home/_navigation.html.erb
@@ -2,46 +2,46 @@
 	<div class="col-md-12" >
 		<ul id="tapor-nav" class="list-unstyled">
 			<li>
-				<a href='#' ng-click="go_to('/pages/about_tapor')">About</a>
+				<a href='/pages/about_tapor'>About</a>
 			</li>
 			<li>
-				<a href='#' ng-click="go_to('/pages/tour')">Tour</a>
+				<a href='/pages/tour'>Tour</a>
 			</li>
 			<li>
-				<a href='#' ng-click="go_to('/pages/contact')">Contact</a>
+				<a href='/pages/contact'>Contact</a>
 			</li>
 			<li>
-				<a href='#' ng-click="go_to('/tools')">Tools</a>
+				<a href='/tools' >Tools</a>
 			</li>
 			<li ng-if="current_user.is_admin">
-				<a href='#' ng-click="go_to('/tools/featured')">Set featured tools</a>
+				<a href='/tools/featured'>Set featured tools</a>
 			</li>
 			<li>
-				<a href='#' ng-click="go_to('/tool_lists')">Lists</a>
+				<a href='/tool_lists'>Lists</a>
 			</li>			
 		<!-- 	<li>
 				<a href='#' ng-click="go_to('/pages/tutorials')">Tutorials</a>
 			</li> -->
 			<li>
-				<a href='#' ng-click="go_to('/pages/useful_links')">Useful links</a>
+				<a href='/pages/useful_links'>Useful links</a>
 			</li>
 			<li ng-if="current_user === null">
-				<a href='#' ng-click="go_to('/signin')">Login</a>
+				<a href='/signin'>Login</a>
 			</li>
 			<li ng-if="current_user !== null">
 				<a href='/users/{{current_user.id}}'>Profile</a>
 			</li>
 			<li ng-if="current_user !== null">
-				<a href='#' ng-click="go_to('/tools/new')">Add tool</a>
+				<a href='/tools/new'>Add tool</a>
 			</li>
 			<li ng-if="current_user !== null">
-				<a href='#' ng-click="go_to('/tool_lists/new')">Add list</a>
+				<a href='/tool_lists/new'>Add list</a>
 			</li>
 			<li ng-if="current_user.is_admin">
-				<a href='#' ng-click="go_to('/attributes')">Attributes</a>
+				<a href='/attributes'>Attributes</a>
 			</li>
 			<li ng-if="current_user.is_admin">
-				<a href='#' ng-click="go_to('/users')">Users</a>
+				<a href='/users'>Users</a>
 			</li>
 			<li ng-if="current_user !== null">
 				<a href='/sign_out'>Logout</a>
