--- a/app/assets/templates/pages/view.html
+++ b/app/assets/templates/pages/view.html
@@ -4,7 +4,7 @@
 			<h1>{{data.title}}</h1>
 		</div> -->
 		<div class="col-md-offset-10 col-md-2">		
-			<button  ng-if="user.is_admin" class="btn btn-primary" ng-click="edit_page()">Edit</button>
+			<button  ng-if="current_user.is_admin" class="btn btn-primary" ng-click="edit_page()">Edit</button>
 		</div>
 	</div>
 	<div class="row">
