--- a/app/assets/templates/tools/view.html
+++ b/app/assets/templates/tools/view.html
@@ -54,7 +54,7 @@
 						<div class="panel-body">
 							<dl>
 								<dt>
-									Creator
+									Creator(s)
 								</dt>
 								<dd>
 									{{data.tool.creators_name}}
