--- a/app/assets/templates/tool_lists/index.html
+++ b/app/assets/templates/tool_lists/index.html
@@ -26,7 +26,7 @@
 	         </div>
 	         <div class="row">
 	          <div class="col-md-12">
-	            {{tool_list.detail}}
+	            {{tool_list.detail | cutEllipsis : 300}}
 	          </div>
 	         </div>
 	      </div>
