--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -27,7 +27,7 @@
 	      		<div class="row">
 	      			<div class="col-md-12">
 
-	      			<div class="break-content tapor-tool-detail"> {{ tool.detail| htmlToPlaintext | maxN: 300}} </div>
+	      			<div class="break-content tapor-tool-detail"> {{ tool.detail| htmlToPlaintext | limitTo: 300}} </div>
 	      			
 	      			</div>
 	      		</div>
@@ -180,7 +180,7 @@
 					<div class="tapor-title">Comments</div>
 					<div ng-repeat="comment in latest_comments" class="tapor-comment">
 						<strong><a href='/users/{{comment.user.id}}'>{{comment.user.name}}</a> on <a href="/tools/{{comment.tool.id}}"> {{comment.tool.name}}</a>:</strong>
-						<span class="break-content">{{comment.content | htmlToPlaintext | maxN: 100}} <a href="/tools/{{comment.tool.id}}#{{comment.id}}">[...]</a></span>
+						<span class="break-content">{{comment.content | htmlToPlaintext | limitTo: 100}} <a href="/tools/{{comment.tool.id}}#{{comment.id}}">[...]</a></span>
 					</div>
 
 				</div>
