--- a/app/assets/templates/tools/index.html
+++ b/app/assets/templates/tools/index.html
@@ -2,20 +2,27 @@
 	<!-- faceting -->
 	<div class="row">
 		<div class="col-md-12">
-			<form class="form-inline">
-					<div class="form-group col-xs-4" ng-repeat="attribute in attributes">		
-						<label class="col-sm-6 text-right" style="margin-top: 10px">{{attribute.name}}</label>
-						<select class='form-control col-sm-6 search-field' ng-model='attribute.model' ng-options='value.name for value in attribute.attribute_values | orderBy:"index"' ng-change='updateAttributesFilter()'>
-							<option selected name=''></option>
-						</select>
-					</div>
-					<div class="form-group col-xs-4">
-						<label class="col-sm-6 text-right" style="margin-top: 10px">Tag</label>
-						<select class='form-control col-sm-6 search-field' ng-model='tags.model' ng-options='value.text for value in tags.values track by value.id' ng-change='updateTagsFilter()'>
-							<option selected name=''></option>
-						</select>
-					</div>
-			</form>
+			<div class="well">
+				<div class="row">
+				<div class="col-md-12">
+				<h3>Filters: Narrow the Selection of Tools</h3>
+				<form class="form-inline">
+						<div class="form-group col-xs-4" ng-repeat="attribute in attributes">		
+							<label class="col-sm-6 text-right" style="margin-top: 10px">{{attribute.name}}</label>
+							<select class='form-control col-sm-6 search-field' ng-model='attribute.model' ng-options='value.name for value in attribute.attribute_values | orderBy:"index"' ng-change='updateAttributesFilter()'>
+								<option selected name=''></option>
+							</select>
+						</div>
+						<div class="form-group col-xs-4">
+							<label class="col-sm-6 text-right" style="margin-top: 10px">Tag</label>
+							<select class='form-control col-sm-6 search-field' ng-model='tags.model' ng-options='value.text for value in tags.values track by value.id' ng-change='updateTagsFilter()'>
+								<option selected name=''></option>
+							</select>
+						</div>
+				</form>
+				</div>
+				</div>
+			</div>
 		</div>
 	</div>
 
