--- a/app/assets/templates/tools/index.html
+++ b/app/assets/templates/tools/index.html
@@ -46,6 +46,7 @@
 <!-- glyphicon-arrow-down -->
 		<div class="col-md-6">
 			<form class="form-inline">
+				<label>Sort by</label>
 				<button class='btn' ng-class="{'btn-primary': order_by=='name'}" ng-click='orderTools("name")'>
 					Name 
 					<span class='glyphicon' ng-class="{'glyphicon-arrow-down': order_by=='name' && sort_asc==true, 'glyphicon-arrow-up': order_by=='name' && sort_asc==false}" ></span>
