--- a/app/assets/templates/tools/index.html
+++ b/app/assets/templates/tools/index.html
@@ -19,6 +19,14 @@
 								<option selected name=''></option>
 							</select>
 						</div>
+						<div class="form-group col-xs-4">
+							<label class="col-sm-6 text-right" style="margin-top: 10px">Type</label>
+							
+							<select class='form-control col-sm-6 search-field' ng-model='nature' ng-options='value.text for value in nature_values' ng-change='updateNatureFilter()'>
+								<option selected name=''></option>
+							</select>
+
+						</div>						
 				</form>
 				</div>
 				</div>
