--- a/app/assets/templates/tapor/index.html
+++ b/app/assets/templates/tapor/index.html
@@ -17,36 +17,33 @@
 	<div class="row" >
 		<div class="col-md-8" id="tapor-featured-carrousel">
 			
-			<carousel interval="8000" class="tapor-carousel">
+			<carousel interval="8000000" class="tapor-carousel">
 	      <slide ng-repeat="tool in featured" active="slide.active" class="tapor-slide">
 	  
 
  	      <div class="row">
-	      	<div class="col-md-3">
+	      	<div class="col-xs-3">
 	      		
-	      		<div class="row">
-	      			<div class="col-md-12">
+	      		
 
 	      			<div class="break-content tapor-tool-detail"> {{ tool.detail| htmlToPlaintext | limitTo: 300}} </div>
-	      			
-	      			</div>
-	      		</div>
-
+	      			<div star-rating rating-value="tool.ratings.system" max="5" is-interactive="false" class=""></div>
+	      		
 <!-- 	      		<div class="row">
 	      			<div class="col-md-12">
 	      			</div>
 	      		</div> -->
 
-	      		<div class="row">
+<!-- 	      		<div class="row">
 	      			<div class="col-md-12">
 	      				<div star-rating rating-value="tool.ratings.system" max="5" is-interactive="false"></div>
 	      			</div>
-	      		</div>
+	      		</div> -->
 
 	      	</div>	
-	      	<div class="col-md-9">
+	      	<div class="col-xs-9">
 	      		<a href="/tools/{{tool.id}}">
-							<img ng-src="{{tool.image_url}}" height="400" width="500">	      
+							<img class="img-responsive" ng-src="{{tool.image_url}}">
 						</a>		
 	      	</div>
 	      </div>
