--- a/app/assets/templates/attributes/edit.html
+++ b/app/assets/templates/attributes/edit.html
@@ -20,7 +20,7 @@
 					  	<span ng-repeat='value in data.attribute_values' >
 					  		<div class='row possible-value'>
 						  		<div class="col-sm-10">
-										<input type="text" class="form-control" id="inputPossible$index" placeholder="Value" ng-model="value.name">
+										<input type="text" class="form-control" id="att-val-{{value.id}}" placeholder="Value" ng-model="value.name">
 									</div>
 									
 									<div class="col-sm-2">
